[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/worlds/gridmaps/gridmaps.gd" type="Script" id=1]

[node name="Gridmaps" type="Spatial"]
script = ExtResource( 1 )

[node name="ground" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_xp" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_xn" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_zp" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="wall_zn" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="pillar" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="ceiling" type="GridMap" parent="."]
cell_size = Vector3( 1.5, 3, 1.5 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}
